--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
+[build-system]
+requires = ["setuptools"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "python-project-tools"
 version = "0.9.0"
@@ -9,6 +13,9 @@ dependencies = [
     "pydantic-settings>=2.9.1",
     "orjson>=3.10.16",
 ]
+
+[tool.setuptools]
+packages = ["tools"]
 
 [project.optional-dependencies]
 database = [
